--- a/sass/base/base.scss
+++ b/sass/base/base.scss
@@ -13,7 +13,7 @@ html {
 
 body {
   color: var(--color-white);
-  background-color: $color-main-y;
+  background-color: var(--color-white);
   box-sizing: border-box;
 }
 
