--- a/views/hero.ejs
+++ b/views/hero.ejs
@@ -1,46 +1,1 @@
-<section class="hero wrapper-main">
-  <div class="hero__theatre">
-    <h1 class="hero-font">мисте</h1>
-    <h1 class="hero-font">цтво -</h1>
-    <h1 class="hero-font">зброя</h1>
-  </div>
-  <div class="hero__desc">
-    <div class="hero__desc__meta">
-      <div class="hero__desc__meta__date">
-        <div class="dot"></div>
-        <p class="paragraph">14.05.2022 / 12:00 - 20:00</p>
-      </div>
-      <div class="hero__desc__meta__loc">
-        <div class="dot"></div>
-        <p class="paragraph">Нижньорюрківська, 31</p>
-      </div>
-    </div>
-    <div class="hero__desc__about">
-      <!-- <p class="paragraph-bold">Про подію</p> -->
-      <p class="paragraph">
-        «Мистецтво–Зброя!» — це день сучасної української культури в стінах НЮ31. <br />
-        Ми зібрали разом близьких митців та мисткинь , артистів, музикантів, аби вони поділились
-        своїми відчуттями війни. <br />
-        Ми зібрали разом близьких митців та мисткинь , артистів, музикантів, аби вони поділились
-        своїми відчуттями війни.
-        <br />
-        «Мистецтво–Зброя!» — це культурний діалог митців та мисткинь під час війни. Можливість,
-        крізь оптику іншого, відчути інакший досвід проживання теперішнього. Мистецтво, що актуальне
-        на часі війни, чи створене у війні. Спроба осягнути хто ми, в який час живемо та куди йдемо.
-        <br />
-        <br />
-        Вхід — на місці донейт 200 uah або більше. <br />
-        Весь профіт відправляємо ЗСУ та артистам.
-      </p>
-    </div>
-    <ul class="hero__desc__bages">
-      <li><img src="" alt="" /></li>
-      <li><img src="" alt="" /></li>
-      <li><img src="" alt="" /></li>
-      <li><img src="" alt="" /></li>
-      <li><img src="" alt="" /></li>
-      <li><div></div></li>
-    </ul>
-  </div>
-</section>
-<section class="marquee"></section>
+<section class="hero wrapper-main"></section>
