--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,10 +1,182 @@
 <%- include('layout/head.ejs') %>
 
 <body class="">
-  <%- include('layout/nav.ejs') %>
-  <main>
-    <%- include('hero.ejs') %><%- include('participants.ejs') %><%- include('support.ejs') %><%-
-    include('partners.ejs') %>
+  <main class="main-page-bg">
+    <div class="main-page-bg__overlay">
+      <section class="hero wrapper-main">
+        <!-- logo -->
+        <div class="hero--1">
+          <img src="/src/imgs/logos/hero-logo-anim.gif" alt="art weapon logo" class="" />
+        </div>
+        <!-- navigation -->
+        <div class="hero--2--mob">
+          <ul>
+            <li>
+              <a href="" class="menu-btn"></a>
+            </li>
+            <li>
+              <a href=""><h2 class="heading-2">Timetable</h2></a>
+            </li>
+            <li>
+              <a href="https://ra.co/events/1645227" target="_blank"
+                ><h2 class="heading-2 border-1">Tickets</h2></a
+              >
+            </li>
+          </ul>
+        </div>
+        <div class="hero--2">
+          <ul>
+            <li>
+              <a href=""><h2 class="heading-2">Timetable</h2></a>
+            </li>
+            <li>
+              <a href=""><h2 class="heading-2">Map</h2></a>
+            </li>
+            <li>
+              <a href=""><h2 class="heading-2">Donate</h2></a>
+            </li>
+          </ul>
+        </div>
+        <!-- berliner-baer -->
+        <div class="hero--3">
+          <img src="/src/imgs/Berliner-Baer.png" alt="" class="" />
+        </div>
+        <!-- lineup -->
+        <div class="hero--4">
+          <ul>
+            <li>
+              <a href="" class="lineup__item"
+                ><h3 class="heading-3">
+                  warнякання <br />
+                  <span class="paragraph">(Антон Слєпаков <br />/ Андрій Соколов)</span>
+                </h3></a
+              >
+            </li>
+            <li>
+              <a href="" class="lineup__item"><h3 class="heading-3">OTOY</h3></a>
+            </li>
+            <li>
+              <a href="" class="lineup__item"><h3 class="heading-3">Tonka</h3></a>
+            </li>
+            <li>
+              <a href="" class="lineup__item"><h3 class="heading-3">Kurs Valüt</h3></a>
+            </li>
+            <li>
+              <a href="" class="lineup__item"><h3 class="heading-3">Sensitive Content</h3></a>
+            </li>
+            <li>
+              <a href="" class="lineup__item"><h3 class="heading-3">Slas Koroliov</h3></a>
+            </li>
+            <li>
+              <a href="" class="lineup__item"><h3 class="heading-3">RUSIIICK</h3> </a>
+            </li>
+            <li>
+              <a href="" class="lineup__item"><h3 class="heading-3">The Lazy Jezus</h3> </a>
+            </li>
+            <li>
+              <a href="" class="lineup__item"><h3 class="heading-3">KOLOAH</h3> </a>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="" class="lineup__item"><h3 class="heading-3">MONOCONDA</h3> </a>
+            </li>
+            <li>
+              <a href="" class="lineup__item"><h3 class="heading-3">Bejenec</h3> </a>
+            </li>
+            <li>
+              <a href="" class="lineup__item"
+                ><h3 class="heading-3">
+                  FIGURAT /<br />
+                  DEE POSH
+                </h3>
+              </a>
+            </li>
+            <li>
+              <a href="" class="lineup__item"><h3 class="heading-3">SYMONENKO</h3> </a>
+            </li>
+            <li>
+              <a href="" class="lineup__item"><h3 class="heading-3">Jane</h3></a>
+            </li>
+            <li>
+              <a href="" class="lineup__item"><h3 class="heading-3">BADWOR7H</h3></a>
+            </li>
+            <li>
+              <a href="" class="lineup__item"><h3 class="heading-3">MAAT</h3></a>
+            </li>
+            <li>
+              <a href="" class="lineup__item"><h3 class="heading-3">Paat.</h3> </a>
+            </li>
+            <li>
+              <a href="" class="lineup__item"><h3 class="heading-3">Aerobiica</h3></a>
+            </li>
+            <li>
+              <a href="" class="lineup__item"><h3 class="heading-3">Pledov</h3></a>
+            </li>
+          </ul>
+        </div>
+        <!-- areas -->
+        <div class="hero--5">
+          <ul>
+            <li>
+              <a href="https://ra.co/events/1645227" target="_blank"
+                ><h2 class="heading-2 border-1">Tickets</h2></a
+              >
+            </li>
+            <li>
+              <a href="" class="menu-btn"></a>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <h1 class="heading-1">Music</h1>
+            </li>
+            <li>
+              <h1 class="heading-1">Theatre</h1>
+            </li>
+            <li>
+              <h1 class="heading-1">Exhibition</h1>
+            </li>
+            <li>
+              <h1 class="heading-1">Art market</h1>
+            </li>
+            <li>
+              <h1 class="heading-1">Tatoo</h1>
+            </li>
+            <li>
+              <h1 class="heading-1">Food court</h1>
+            </li>
+          </ul>
+        </div>
+        <!-- footer -->
+        <div class="hero--6 footer">
+          <div class="footer__address">
+            <h1 class="heading-1">Berlin</h1>
+            <a
+              href="https://www.google.com/maps/place/Alte+M%C3%BCnze/@52.5161321,13.4084851,18z/data=!3m1!4b1!4m5!3m4!1s0x47a84e2132045a53:0x1d72e8f20a94f2dc!8m2!3d52.5161321!4d13.4090756"
+              target="_blank"
+              class="heading-3"
+            >
+              Alte Münze <br />
+              Molkenmarkt,2
+            </a>
+          </div>
+        </div>
+        <!-- partners -->
+        <div class="hero--7 partners">
+          <div class="footer__partners">
+            <div class="vitsche-small-logo footer-logo"></div>
+            <div class="polygon-small-logo footer-logo"></div>
+            <div class="gvl-small-logo footer-logo"></div>
+          </div>
+        </div>
+        <!-- date -->
+        <div class="hero--8 date">
+          <h1 class="heading-1 text">25 February</h1>
+          <h1 class="heading-1 text--mob">25 Feb</h1>
+          <h1 class="heading-3 text--mob">DOOR 12:00</h1>
+        </div>
+      </section>
+    </div>
   </main>
-  <%- include('layout/end.ejs') %>
 </body>
