--- a/sass/base/utilities.scss
+++ b/sass/base/utilities.scss
@@ -1,9 +1,46 @@
+@import "../abstracts/mixins.scss", "../base/colors.scss";
+
 .wrapper-main {
-  padding: 0 12vw;
+  width: 100%;
+  height: 100vh;
+  // max-width: 145rem;
+  padding: 2% 3%;
+  margin: auto auto;
+  @include respond(phone) {
+    max-width: 100%;
+    padding: 2rem;
+  }
 }
 
 .dot {
   border-radius: 100%;
   width: 1rem;
   height: 1rem;
+}
+
+.border-1 {
+  border: 3px solid $color-0;
+  padding: 1rem 1.5rem;
+}
+
+.vitsche-small-logo {
+  background-image: url("../src/imgs/logos/vitsche.svg");
+}
+.polygon-small-logo {
+  background-image: url("../src/imgs/logos/polygon.svg");
+}
+.gvl-small-logo {
+  background-image: url("../src/imgs/logos/gvl.svg");
+}
+
+.footer-logo {
+  background-size: contain;
+  background-position: center bottom;
+  background-repeat: no-repeat;
+  width: 13rem;
+  height: 5rem;
+  @include respond(phone) {
+    width: 10rem;
+    height: 4rem;
+  }
 }
