--- a/sass/pages/index.scss
+++ b/sass/pages/index.scss
@@ -1,234 +1,259 @@
 @import "../base/colors.scss", "../abstracts/mixins.scss";
 
 //HERO SECTION ===========================
-.hero {
-  display: grid;
-  grid-template-columns: repeat(12, 1fr);
-  column-gap: 2rem;
-  margin-top: 9rem;
-  @include respond(phone) {
-    display: flex;
-    flex-direction: column;
-    margin-top: 12rem;
-  }
-  &__theatre {
-    grid-column: 1 / 7;
-  }
-  &__desc {
-    grid-column: 7 / 13;
+.main-page-bg {
+  background-image: url("../src/imgs/main-bg.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  &__overlay {
+    background-image: url("../src/imgs/main-bg-overlay.png");
+    background-size: auto 90%;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100%;
     @include respond(phone) {
-      margin-top: 6rem;
-    }
-    &__meta {
-      &__date {
-        display: flex;
-        align-items: center;
-        div {
-          margin-right: 1rem;
-          background-color: $color-main-b;
-        }
-      }
-      &__loc {
-        display: flex;
-        // justify-content: center;
-        align-items: center;
-        margin-top: 1rem;
-        div {
-          margin-right: 1rem;
-          background-color: $color-main-b;
-        }
-      }
-    }
-    &__about {
-      margin-top: 3.2rem;
-      > p {
-        margin-bottom: 1rem;
-      }
+      background-size: 90% auto;
+      background-position: bottom 20% center;
     }
   }
 }
 
-// PARTICIPANTS SECTION ===========================
-// TABS SWITCHERS =======================
-.participants {
-  margin-top: 10rem;
+.hero {
+  display: grid;
+  position: relative;
+  grid-template-columns: repeat(3, 1fr);
+  row-gap: 2rem;
+  column-gap: 4.8rem;
+  grid-template-rows: 8rem auto auto 10rem;
+  width: 100%;
   @include respond(phone) {
-    margin-top: 4rem;
+    column-gap: 2rem;
+    grid-template-columns: repeat(2, auto);
+    grid-template-rows: auto;
   }
-  ul {
+  // LOGO
+  &--1 {
+    grid-column: 1 / 2;
+    grid-row: 1 / 3;
     display: flex;
-    margin-top: 6rem;
+    justify-content: flex-start;
+    align-items: flex-start;
     @include respond(phone) {
-      width: 100%;
-      overflow-x: scroll;
-      padding: 0 0 0 12vw !important;
-      margin-top: 2rem;
+      grid-column: 1 / 3;
+      grid-row: 2 / 3;
     }
-    li {
-      background-color: white;
-      padding: 2rem 4rem;
-      border-radius: 50px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      cursor: pointer;
-      text-transform: capitalize;
+    img {
+      width: 100%;
+      object-fit: contain;
       @include respond(phone) {
-        padding: 0.4rem 2rem;
-      }
-      &:hover {
-        background-color: $color-main-b;
-        color: white;
-      }
-      &.active {
-        background-color: $color-main-b;
-        color: white;
+        // width: 40%;
       }
     }
   }
-  &--wrapper {
-    padding-left: 12vw;
+  // Bear
+  &--3 {
+    grid-column: 2 / 3;
+    grid-row: 2 / 4;
     display: flex;
-    position: relative;
-    flex-direction: row;
-    overflow-x: scroll;
-    > div {
-      display: none;
-      justify-content: space-between;
-      margin-top: 8rem;
+    justify-content: center;
+    align-items: center;
+    @include respond(phone) {
+      grid-column: 1 / 3;
+      grid-row: 3 / 4;
     }
-    div.visible {
-      display: flex;
-    }
-
-    .participant {
-      position: relative;
-      min-width: 40vw;
-      max-width: 56rem;
-      height: auto;
-      margin: 0 2rem 0 0;
+    img {
       @include respond(phone) {
-        min-width: 80vw;
-        max-width: 90vw;
+        width: 30%;
+        object-fit: contain;
+        margin-bottom: -4rem;
       }
+    }
+  }
+  // Lineup
+  &--4 {
+    pointer-events: none;
+    grid-column: 1 / 2;
+    grid-row: 3 / 4;
+    display: flex;
+    justify-content: flex-start;
+    padding-left: 3rem;
+    @include respond(phone) {
+      display: none;
+    }
+    > ul {
+      margin-right: 2rem;
       &:last-of-type {
         margin-right: 0;
       }
-      &__pic {
-        position: relative;
+      > li {
+        margin-top: 0.4rem;
         display: flex;
-        justify-content: center;
-        align-items: center;
-        // width: 100%;
-        // height: 100%;
-        margin-top: 2rem;
-        img {
-          width: 100%;
-          max-height: 80vh;
-          object-fit: contain;
+        > *:hover {
+          color: $color-1;
         }
-        > div {
-          position: absolute;
-          left: 2rem;
-          bottom: 2rem;
+        a {
           display: flex;
-          justify-content: center;
-          align-items: center;
-          .dot {
-            margin-right: 1rem;
-            background-color: $color-main-b;
-          }
-          p {
-            color: white;
+          flex-direction: row;
+        }
+        h3 {
+          white-space: nowrap;
+        }
+        p {
+          align-self: flex-end;
+          margin-left: 1rem;
+        }
+      }
+    }
+  }
+  // Areas
+  &--5 {
+    grid-column: 3 / 4;
+    grid-row: 1 / 4;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    @include respond(phone) {
+      display: none;
+    }
+    // Action buttons
+    > ul:first-of-type {
+      display: flex;
+      justify-content: space-between;
+      width: 100%;
+      h2 {
+        text-transform: uppercase;
+        cursor: pointer;
+        &:hover {
+          color: $color-1;
+          border-color: $color-1;
+        }
+      }
+    }
+    > ul:last-of-type {
+      pointer-events: none;
+      margin-top: 6rem;
+      > li {
+        display: flex;
+        a {
+          display: flex;
+          flex-direction: row;
+        }
+        h1 {
+          text-transform: uppercase;
+          cursor: pointer;
+          &:hover {
+            color: $color-1;
           }
         }
       }
-      &__desc {
-        margin-top: 2rem;
-      }
     }
   }
-}
-
-// SUPPORT SECTION ===========================
-.support {
-  display: grid;
-  grid-template-columns: repeat(12, 1fr);
-  column-gap: 2rem;
-  margin: 10rem 0;
-  @include respond(phone) {
+  &--6 {
+    grid-column: 1 / 3;
+    grid-row: 4 / 5;
+    position: absolute;
+    bottom: 0;
     display: flex;
-    flex-direction: column;
-    position: relative;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 1.6rem;
+    @include respond(phone) {
+      grid-column: 1 / 2;
+      grid-row: 4 / 5;
+      display: none;
+    }
   }
-  &__title {
-    grid-column: 1 / 7;
-    img {
-      width: 60%;
-      height: auto;
-      // margin-top: -rem;
+  // Partners
+  &--7 {
+    grid-column: 2 / 3;
+    grid-row: 4 / 5;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    padding-bottom: 1.6rem;
+    @include respond(phone) {
+      grid-column: 1 / 3;
+      grid-row: 5 / 6;
+      display: none;
+    }
+  }
+  &--8 {
+    grid-column: 3 / 4;
+    grid-row: 4 / 5;
+    @include respond(phone) {
+      grid-column: 2 / 3;
+      grid-row: 4 / 5;
+    }
+    .text {
+      display: flex;
       @include respond(phone) {
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        z-index: -1;
-        // margin-top: 0;
+        display: none;
+      }
+      &--mob {
+        display: none;
+        @include respond(phone) {
+          display: flex;
+          justify-content: flex-start;
+          align-items: flex-start;
+          white-space: nowrap;
+        }
       }
     }
-  }
-  &__text {
-    grid-column: 7 / 10;
-    @include respond(phone) {
-      margin-top: 6rem;
-    }
-    p {
-      margin-bottom: 2rem;
-    }
-  }
-  &__details {
-    grid-column: 10 / 13;
-    @include respond(phone) {
-      padding-bottom: 2rem;
-    }
-    > div {
-      border-radius: 50px;
-      border: 1px solid black;
-      padding: 2rem 3rem;
-      margin-top: 1.6rem;
+    h1 {
+      text-transform: uppercase;
     }
   }
 }
 
-// TIMING SECTION ===========================
-.timing {
-  .wrapper {
-    padding-left: 12vw;
+.footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  width: 100%;
+  &__address {
     display: flex;
-    flex-direction: column;
-    position: relative;
-    // flex-direction: row;
-    overflow-x: scroll;
-    height: 70vh;
-    width: 600rem;
-    img {
-      width: 100%;
-      height: 100%;
-      // object-fit: fill;
+    flex-direction: row;
+    padding-left: 2.8rem;
+    @include respond(phone) {
+      flex-direction: column;
+      padding-left: 0;
+    }
+    h1 {
+      text-transform: uppercase;
+      margin-bottom: -0.5rem;
+    }
+    a {
+      display: block;
+      align-self: flex-end;
+      margin-left: 2rem;
+      @include respond(phone) {
+        margin-left: 0;
+      }
+      &:hover {
+        color: $color-1;
+      }
     }
   }
-}
-
-// partners SECTION ===========================
-.partners {
-  > div {
+  &__partners {
     display: flex;
-    justify-content: space-between;
-    margin-top: 4rem;
+    flex-direction: row;
     > div {
-      width: 30%;
-      img {
-        width: 100%;
+      margin-right: 4.5rem;
+      &:last-of-type {
+        margin-right: 0;
       }
+    }
+  }
+  &__date {
+    display: flex;
+    @include respond(phone) {
+      display: none;
+    }
+    h1 {
+      text-transform: uppercase;
+      align-self: flex-end;
     }
   }
 }
