--- a/sass/abstracts/typography-styles-mixins.scss
+++ b/sass/abstracts/typography-styles-mixins.scss
@@ -31,6 +31,10 @@ $DrukCyr-Heavy: "DrukCyr-Heavy";
   @include font($Roboto-Regular, 400, 2.4rem, 2.4rem, uppercase, normal);
 }
 
+@mixin heading-3--mob {
+  @include font($Roboto-Regular, 400, 2.4rem, 3rem, uppercase, normal);
+}
+
 // @mixin heading-4 {
 //   @include font($font-worksans-regular, 400, 1.8rem, 2.2rem, none, normal);
 // }
