--- a/sass/pages/index.scss
+++ b/sass/pages/index.scss
@@ -257,3 +257,61 @@
     }
   }
 }
+
+.music {
+  &--mob {
+    display: none;
+    @include respond(phone) {
+      display: grid;
+      grid-template-columns: repeat(2, auto);
+      grid-auto-rows: max-content;
+      margin-top: 6rem;
+    }
+    &__controls {
+      grid-column: 1 / 3;
+      display: flex;
+      // justify-content: space-between;
+      justify-content: space-around;
+      align-items: center;
+      width: 100%;
+      .arrow-left {
+        background-image: url("../src/imgs/icons/arrow-left.svg");
+        background-size: 5rem;
+        background-repeat: no-repeat;
+        background-position: center;
+        width: 5rem;
+        height: 5rem;
+      }
+      .arrow-right {
+        background-image: url("../src/imgs/icons/arrow-right.svg");
+        background-size: 5rem;
+        background-repeat: no-repeat;
+        background-position: center;
+        width: 5rem;
+        height: 5rem;
+      }
+      h1 {
+        text-transform: uppercase;
+      }
+    }
+    &__content {
+      grid-column: 1 / 3;
+      display: flex;
+      margin-top: 4rem;
+      ul:last-of-type {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+      }
+      h3 {
+        text-transform: uppercase;
+      }
+    }
+    &__photo {
+      grid-column: 1 / 3;
+      margin-top: 4.4rem;
+      width: 100%;
+      height: auto;
+    }
+  }
+}
